# orchestrator-cube-container

./: .dockerignore  .gitignore  AUDIT_CONSENSUS.md  AUDIT_REPORT_APEX_FORENSICS.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  LICENSE  Makefile  NOTICE  QUICKSTART.md  README.md  README_zh.md  RELEASE_NOTES.md  openapi.yml
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue.md
.github/workflows/: ci.yml  claude-response.yml  release-binaries.yml
CubeAPI/: Cargo.toml
CubeEgress/: start.sh
CubeEgress/lua/: cert_signer.lua
CubeMaster/: .code.yml  conf.yaml  go.mod  go.sum
CubeProxy/: Dockerfile
Cubelet/: go.mod  go.sum
docs/: UNTRUSTED_HOSTING.md  package-lock.json  package.json
mcp-server/: pyproject.toml
mcp-server-go/: .gosec.toml  AGENT_GUIDE.md  ARCHITECTURE.md  alerting.go  audit_query.go  auth.go  auth_test.go  auth_tokens.go  backend.go  backup.go  bench_test.go  certificates.go  client.go  configmaps.go  databases.go  deploy.go  deploy_rollout.go  discovery.go  docker_client.go  e2e_test.go  environments.go  events.go  gc.go  go.mod  go.sum  ha.go  handlers_basic.go  handlers_phase2.go  handlers_secure.go  health.go  hypervisor.go  hypervisor_cloudinit.go  hypervisor_gpu.go  hypervisor_validate.go  hypervisor_zfs.go  images.go  jobs.go  log_aggregation.go  logstream.go  metrics.go  (+20 more)
mcp-server/src/cube_mcp/: __init__.py  auth_gateway.py  client.py  deploy.py  security.py  server.py
network-agent/: go.mod  go.sum
skills/: incident-response.md  multi-node-deployment.md  security-hardening.md  untrusted-code-execution.md
web/: package-lock.json
(+92 files in other folders)
