[project]
name = "cube-container-mcp"
version = "0.1.0"
description = "MCP server for controlling Cube Container cluster (AI-agent-managed container orchestration)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
]

[project.scripts]
cube-mcp = "cube_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cube_mcp"]
